Fix bug header cart : z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -546,7 +546,7 @@
 }
 
 .header__cart-list {
-    z-index: 1;
+    z-index: 2;
     display: none;
     position: absolute;
     top: calc(100% + 13px);
